--- a/adsea.publishing/index.html
+++ b/adsea.publishing/index.html
@@ -8,7 +8,7 @@
     <script async custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"></script>
     <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
     <script async custom-element="amp-audio" src="https://cdn.ampproject.org/v0/amp-audio-0.1.js"></script>
-    <link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/2980/5252/files/favicon_32x32.png?v=1521894486" type="image/png" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png" />
     <title>Adsea Publishing</title>
     <link rel="canonical" href="http://example.ampproject.org/article-metadata.html" />
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
@@ -470,7 +470,7 @@
       <div class="menu content-width">
         <div class="logo">
           <a href="popap.store/adsea.publishing">
-            <amp-img src="img/logo.png" layout="responsive" width="180" height="60"></amp-img>
+            <amp-img src="img/logo-ap.png" layout="responsive" width="180" height="60"></amp-img>
           </a>
         </div>
         <button id="sidebar-menu-btn" on="tap:sidebar.toggle">☰</button>
