--- a/adsea.publishing/index.html
+++ b/adsea.publishing/index.html
@@ -469,7 +469,7 @@
     <header>
       <div class="menu content-width">
         <div class="logo">
-          <a href="/">
+          <a href="/adsea.publishing">
             <amp-img src="img/logo-ap.png" layout="responsive" width="180" height="60"></amp-img>
           </a>
         </div>
