--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@ limitations under the License.
     <script custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js" async=""></script>
     <script custom-element="amp-instagram" src="https://cdn.ampproject.org/v0/amp-instagram-0.1.js" async=""></script>
     <script custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js" async=""></script>
+        
+        <!-- google adsense -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8942638117851999" crossorigin="anonymous"></script>
 
     <style amp-custom="">
       /*! Bassplate | MIT License | http://github.com/basscss/bassplate */
